--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 anyio==4.9.0
+APScheduler==3.11.0
 astroid==3.3.9
 black==25.1.0
 certifi==2025.1.31
 click==8.1.8
+colorama==0.4.6
 dill==0.3.9
 dnspython==2.7.0
 dotenv==0.9.9
@@ -25,3 +27,6 @@ python-telegram-bot==22.0
 sniffio==1.3.1
 telegram==0.0.1
 tomlkit==0.13.2
+typing_extensions==4.13.1
+tzdata==2025.2
+tzlocal==5.3.1
