--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.16
+aiosignal==1.3.2
 anyio==4.9.0
 APScheduler==3.11.0
 astroid==3.3.9
+attrs==25.3.0
 black==25.1.0
 certifi==2025.1.31
 click==8.1.8
@@ -8,6 +12,7 @@ colorama==0.4.6
 dill==0.3.9
 dnspython==2.7.0
 dotenv==0.9.9
+frozenlist==1.5.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
@@ -15,11 +20,13 @@ idna==3.10
 isort==6.0.1
 mccabe==0.7.0
 motor==3.7.0
+multidict==6.3.2
 mypy-extensions==1.0.0
 nest-asyncio==1.6.0
 packaging==24.2
 pathspec==0.12.1
 platformdirs==4.3.7
+propcache==0.3.1
 pylint==3.3.6
 pymongo==4.11.3
 python-dotenv==1.1.0
@@ -30,3 +37,4 @@ tomlkit==0.13.2
 typing_extensions==4.13.1
 tzdata==2025.2
 tzlocal==5.3.1
+yarl==1.19.0
