--- a/requirements.txt
+++ b/requirements.txt
@@ -5,13 +5,16 @@ anyio==4.9.0
 APScheduler==3.11.0
 astroid==3.3.9
 attrs==25.3.0
+azure-cognitiveservices-speech==1.35.0
 black==25.1.0
+bson==0.5.10
 certifi==2025.1.31
 click==8.1.8
 colorama==0.4.6
 dill==0.3.9
 dnspython==2.7.0
 dotenv==0.9.9
+ffmpeg-python==0.2.0
 frozenlist==1.5.0
 h11==0.14.0
 httpcore==1.0.7
@@ -23,6 +26,7 @@ motor==3.7.0
 multidict==6.3.2
 mypy-extensions==1.0.0
 nest-asyncio==1.6.0
+openai==1.70.0
 packaging==24.2
 pathspec==0.12.1
 platformdirs==4.3.7
