feat: add task reminder functionality and update environment configuration

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,18 @@
-# Telegram Bot Tokens
-ASSISTANT_BOT_TOKEN=<assistant-bot-token>
-REMINDERS_BOT_TOKEN=<reminders-bot-token>
+# backend endpoint
+api_base_url=<url_of_your_backend_endpoint>
+api_email=<your_api_email_address>
+api_password=<your_api_password>
+
+# mongodb connection uri for connecting to the mongodb atlas cluster
+mongo_uri=<your_mongodb_connection_uri>
+
+# telegram bot tokens
+assistant_bot_token=<token_for_your_assistant_bot>
+reminders_bot_token=<token_for_your_reminders_bot>
+
+# azure speech service credentials
+azure_speech_endpoint=<your_azure_speech_service_endpoint>
+azure_speech_key=<your_azure_speech_service_key>
+
+# openai api key
+openai_api_key=<your_openai_api_key>
