--- a/requirements.txt
+++ b/requirements.txt
@@ -43,10 +43,13 @@ pydantic==2.11.3
 pydantic_core==2.33.1
 pylint==3.3.6
 pymongo==4.11.3
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 python-telegram-bot==22.0
+pytz==2025.2
 referencing==0.36.2
 rpds-py==0.24.0
+six==1.17.0
 sniffio==1.3.1
 telegram==0.0.1
 tomlkit==0.13.2
